--- a/FaceTracker/app/build.gradle
+++ b/FaceTracker/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:design:24.2.0'
     compile 'com.google.android.gms:play-services-vision:9.4.0+'
+    compile 'com.android.support.constraint:constraint-layout:1.1.3'
 }
